# ConsistencyBench

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.ipynb  mkdocs.yml  pyproject.toml  requirements.txt  run_eval.py  setup-poetry.py
consistencybench/: __init__.py  run_eval.py
consistencybench/evaluate/: agreements.py  prompt_template.py  score.py
consistencybench/evaluators/: __init__.py  metrics.py  prompt_template.py  scorer.py
consistencybench/generate/: __init__.py  a2c.py  base.py  prompt_template.py
consistencybench/generators/: __init__.py  base.py  cog.py  prompt_template.py
consistencybench/perturb/: paraphrase.py
consistencybench/perturbations/: paraphrase.py  prompt_template.py
docs/evaluators/: metrics.md  scorer.md
docs/generators/: base.md  cog.md
docs/perturbations/: paraphrase.md
evaluate/: __init__.py  agreements.py  score.py
generate/: a2c.py  base.py
notebooks/: example.ipynb
perturb/: base.py  paraphrase.py  prompt_template.py
scripts/: result_gpt-3.5-turbo_paraphrasing.csv  run_eval.py
